syntax = "proto3";

package products;
option csharp_namespace = "Products.GrpcApi";

message Empty {}

message ProductMsg {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductList {
  repeated ProductMsg items = 1;
}

service ProductsService {
  rpc GetProducts (Empty) returns (ProductList);
}
